[project]
name = "hdr-nerf"
version = "0.0.1"

dependencies = [
    "nerfstudio" # you may want to consider pinning the version, ie "nerfstudio==0.1.19"
]

[tool.setuptools.packages.find]
include = ["hdr_nerf*"]

[project.entry-points.'nerfstudio.method_configs']
hdr-nerf = 'hdr_nerf.config:HdrNerf'
