"""pyproject.toml"""

[project]
name = "hdr-nerf"

dependencies = [
    "nerfstudio" # you may want to consider pinning the version, ie "nerfstudio==0.1.19"
]

[tool.setuptools.packages.find]
include = ["hdr-nerf*"]

[project.entry-points.'nerfstudio.method_configs']
my-method = 'hdr_nerf.config:HdrNerf'
